--- a/server/package.json
+++ b/server/package.json
@@ -17,9 +17,11 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.1",
+    "firebase-admin": "^11.11.0",
     "jsonwebtoken": "^9.0.1",
     "morgan": "^1.10.0",
     "path": "^0.12.7",
+    "plaid": "^16.0.0",
     "uuid": "^9.0.0"
   }
 }
