--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
   },
   "homepage": "https://github.com/Tim-Quattrochi/MERN-Starter#readme",
   "dependencies": {
+    "@firebase/firestore": "^4.2.0",
     "concurrently": "^8.2.0",
+    "i": "^0.3.7",
+    "npm": "^10.1.0",
     "react-router-dom": "^6.14.2"
   },
   "devDependencies": {
